[package]
name = "exblockhash_native"
version = "0.2.0"
authors = []
edition = "2018"

[lib]
name = "exblockhash_native"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.1"
blockhash = { version = "0.5", features = ["image"] }
image = "0.24"

# Go fast, even in development!
[profile.dev]
opt-level = 3
